Blackboard Images + Fixing Report Files

--- a/report/layout/frontpage.tex
+++ b/report/layout/frontpage.tex
@@ -14,17 +14,18 @@
 
 \phantom{hul}
 
-\textsl{\Huge GIRAF - Admin} \\ \vspace{1cm}
+\textsl{\Huge Parental Control - In Smart Home} \\ \vspace{1cm}
 
 \rule{13cm}{3mm} \\ \vspace{1.5cm}
 \vspace{1cm}
 
-\includegraphics[width=0.75\textwidth]{images/girafAdminLogo.png}
+\includegraphics[width=0.75\textwidth, height=0.45\textheight]{images/HFIswitch.jpg}
+
 
 \vspace{1.5cm} 
-\textsc{\Large SW6 Projekt \\
-Group SW601F13 \\
+\textsc{\Large SW7 Projekt \\
+Group SW701E13 \\
 Department of Computer Science\\
 Aalborg University\\
-June 4$^{th}$ 2013\\}
+December 20$^{th}$ 2013\\}
 \end{flushright}
