--- a/report/layout/signatures.tex
+++ b/report/layout/signatures.tex
@@ -12,3 +12,9 @@ Lars Chr. Pedersen\\
 \\
 \noindent\rule{8cm}{0.03cm}\\
 Tommy Knudsen\\
+\\
+\noindent\rule{8cm}{0.03cm}\\ 
+Lisbeth Nielsen\\ 
+\\
+\noindent\rule{8cm}{0.03cm}\\ 
+Jakob Jørgensen\\ 
