--- a/report/layout/titelblad.tex
+++ b/report/layout/titelblad.tex
@@ -23,11 +23,11 @@
 
 \item {\bf Title:} 
 
-GIRAF - Admin
+Parental Control - In Smart Home
 
 \item {\bf Theme:} 
 
-Developing Complex Software Systems
+Internet Technology
 
 \end{description}
 
@@ -35,26 +35,28 @@ Developing Complex Software Systems
 
 \begin{description}
 \item {\bf Project period:}\\
-   P6, Spring Term 2013\\
+   P7, Autumn Term 2013\\
   \hspace{4cm}
 \item {\bf Project group:}\\
-  SW601F13\\
+  SW701E13\\
   \hspace{4cm}
 \item {\bf Participants:}\\
 Jens M. Lauridsen\\
 Johan Sørensen \\
 Lars Chr. Pedersen\\
-Tommy Knudsen
+Tommy Knudsen\\
+Lisbeth Nielsen\\
+Jakob Jørgensen
   \hspace{2cm}
 \item {\bf Supervisor:}\\
-Shuo Shang
+Hua Lu
 \end{description}
 }
 \begin{description}
 \item {\bf Circulation:} 7
 \item {\bf Page count:} \pageref{LastPage}
-\item {\bf Appendix count and type:} 5, Installation Guide and Configuration, Graphical Mockups of the GIRAF System,  Transcript of Meeting with the head of kindergarten (1/3 2013), Usability Testing Appendix, Colour Theme
-\item {\bf Finished on} June 4$^{th}$ 2012
+\item {\bf Appendix count and type:} 0
+\item {\bf Finished on} December 20$^{th}$ 2013
 \end{description}
 \vfill } &
 \parbox{7cm}{
