Draft on analysis_projectFocus.tex

--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -1,3 +1,5 @@
+
+%% Examples %%
 @MISC{testBranch,
 author = {SW601F13},
 title = {GIRAF - Admin: The test version},
@@ -14,101 +16,28 @@ note ={\url{https://github.com/Zucka/girafAdmin/tree/46e19108a6ca0413e2542621255
   note ={Looked up: 20-05-2013},
 }
 
-@MISC{wikipedia,
-  title ={Wikipedia},
-  address={URL: \url{http://en.wikipedia.org/wiki/Main_Page}},
-  year ={2013},
-  note ={Looked up: 26-05-2013},
-}
+%% End of Examples %%
 
-
-
-@MISC{imgAreaSelect,
-author = {Michael Wojciechowski},
-title = {jQuery img libary},
+@MISC{childrenAndNature,
+author = {Children & Nature Network},
+title = {Children and Nature},
 howpublished = {Website},
-year = {May 2013},
-note ={\url{http://odyniec.net/projects/imgareaselect/}}
+year = {September 2013},
+note ={\url{http://www.childrenandnature.org/}}
 }
 
-@MISC{simpleimage,
-author = {Simon Jarvis},
-title = {SimpleImage PHP Libary},
+@MISC{leaveNoChildInside,
+author = {Susan Clayton, Ph.D.},
+title = {Leave No Child Inside},
 howpublished = {Website},
-year = {November 2006},
-note ={\url{http://www.white-hat-web-design.co.uk/blog/resizing-images-with-php/}}
+year = {September 2013},
+note ={\url{http://www.psychologytoday.com/blog/being-green/201204/leave-no-child-inside}}
 }
 
-@MISC{wastelandApi,
-author = {The Wasteland GIRAF group},
-title = {Wasteland API},
+@MISC{micasaverde,
+author = {Mi Casa Verde},
+title = {Mi Casa Verde},
 howpublished = {Website},
-year = {May 2013},
-note ={\url{http://htmlpreview.github.io/?https://github.com/Ezphares/giraf_database/blob/master/source/api/documentation.html}}
-}
-
-@MISC{wasteland,
-author = {The Wasteland GIRAF group},
-title = {Wasteland Project},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{https://github.com/Ezphares/giraf_database/}}
-}
-
-@MISC{canIUse,
-author = {Alexis Deveria},
-title = {Can I use...},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{http://caniuse.com/}}
-}
-
-@MISC{paw,
-author = {Jochen},
-title = {PAW by fun2code},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{http://paw-android.fun2code.de/}}
-}
-
-
-@MISC{wordpress,
-author = {WordPress},
-title = {WordPress.org},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{http://wordpress.org/}}
-}
-
-@MISC{balsamiq,
-author = {balsamiq},
-title = {Balsamiq Studios},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{http://www.balsamiq.com/}}
-}
-
-@MISC{modernizr,
-author = {Modernizr},
-title = {Modernizr},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{http://modernizr.com/}}
-}
-
-
-@MISC{bootstrap,
-author = {Twitter},
-title = {Bootstrap},
-howpublished = {Website},
-year = {May 2013},
-note ={\url{http://twitter.github.io/bootstrap/}}
-}
-
-@manual{phpqrcodet0k4rt,
-  author ={Alexandre Assouad},
-  title ={PHP QR Code - SVG/EPS Update},
-  address={URL: \url{https://github.com/t0k4rt/phpqrcode}},
-  year ={2012},
-  note ={Looked up: 20-05-2013},
+year = {September 2013},
+note ={\url{http://www.micasaverde.com/}}
 }
