Final Draft of analysis_projectFocus.tex + problemStatement.tex

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -33,7 +33,7 @@
 	% Part Analysis
 	\part{Analysis}
 	\input{text/analysis_projectFocus.tex}
-	
+	\input{text/problemStatement.tex}
 	
 	% Part Solution
 	\part{Solution}
