--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -19,7 +19,7 @@ note ={\url{https://github.com/Zucka/girafAdmin/tree/46e19108a6ca0413e2542621255
 %% End of Examples %%
 
 @MISC{childrenAndNature,
-author = {Children & Nature Network},
+author = {Children \& Nature Network},
 title = {Children and Nature},
 howpublished = {Website},
 year = {September 2013},
