--- a/report/draft.tex
+++ b/report/draft.tex
@@ -33,6 +33,7 @@
 	% Part Analysis
 	\part{Analysis}
 	\input{text/analysis_projectFocus.tex}
+	\input{text/targetgroup.tex}
 	\input{text/problemStatement.tex}
 	
 	% Part Solution
