Hardware identification and conclusion added to hardware section

--- a/report/text/hardware.tex
+++ b/report/text/hardware.tex
@@ -5,7 +5,7 @@ In this section the hardware choices of this project will be talked about and an
 In order to control the power to other devices(i.e. Television or Computer), some analog power control is needed. Typically this is controlled by an embedded microcontroller, therefore the choice of hardware platform is to pick the best microcontroller for the project. During development a development board is usually used. A development board is a single printed circuit board with a microcontroller and everything needed to get the microcontroller running. Every I/O\footnote{Input/Output}(generally General-purpose I/O) of the microcontroller is also made easily available using group pins. Picking a hardware platform is then condensed into picking a development board. Following is a comparison of a few different development boards.
 
 \subsubsection{Arduino}
-Arduino development boards come in a few variations, but common among all but one of them is that they are based on Atmel microcontrollers. Along with the development boards, Arduino also comes with its own software library \texttt{Wiring} which simplifies common I/O tasks. The Arduino development boards also implement a standard called \texttt{shields}, which are expansion circuit boards with pin headers that fit onto development boards, with additional pins so that shields can be stacked. This makes the hardware platform easily extendable and flexible using this stacking system. Examples of shields could be GPS, ethernet, LCD displays or breadboards.
+Arduino development boards come in a few variations, but common among all but one of them is that they are based on Atmel microcontrollers. Along with the development boards, Arduino also comes with its own software library \texttt{Wiring} which simplifies common I/O tasks. The Arduino development boards also implement a standard called \texttt{shields}, which are expansion circuit boards with pin headers that fit onto development boards, with additional pins so that shields can be stacked. This makes the hardware platform easily extendable and flexible using this stacking system. Examples of shields could be GPS, Ethernet, LCD displays or breadboards.
 
 
 \subsubsection{Teensy}
@@ -17,3 +17,19 @@ Raspberry Pi, unlike Arduino and Teensy uses a ``full-sized'' ARM processor, whi
 
 
 \subsection{Hardware Identification}
+In order for the person using the system to identify themselves, there has to be some form of hardware identification. This hardware identification has to be unique for that person, so that the system can find out the alloted time of the desired activity. Several factors have to be considered when choosing what hardware identification method to use, such as cost, user friendliness and security. Following is a comparison between some of the hardware identification methods available.
+
+\subsubsection{RFID}
+RFID, short for Radio-frequency Identification, is a method of using either passive or active tags for transferring data between a reader and a tag. A tag is an embedded chip with an antenna, that when receiving power transmits the data on the chip to any readers within range. Active tags have their own power source and thus can be scaled to emit their data over long distances. Passive tags on the other hand do not have an internal power source, and instead is powered by the reader via magnetic fields. This makes passive tags work on smaller ranges. A tag can be compared to a bar code, with the difference being that tags scale much better when needing more data storage and the tag does not have to be visible, i.e. it can be embedded into things.
+
+\subsubsection{NFC}
+NFC, short for Near Field Communication, is a set of standards for the same technology that RFID uses. The differences between them is that NFC is a strict standard, uses only passive tags and only works over small distances. NFC is also the technology being embedded in smartphones, which means that the projects system could be made compatible with apps.
+
+\subsubsection{Fingerprint}
+Fingerprint is a method of recognizing whether a persons fingerprint matches another already scanned fingerprint. A number of technologies can be used to scan a persons fingerprint, such as optical and ultrasonic. An algorithm is also needed to compare certain features of the fingerprint in order to be able to compare between fingerprints. One of the advantages of fingerprint is that the only equipment needed is the scanner and something to compare them, this means that the cost could be kept down. One of the disadvantages of fingerprint is that it has been shown that some readers can be fooled by printing a fingerprint unto paper or using silicone to make a fake fingerprint. Another disadvantage is that it has been shown that children fingerprint change over time as they grow up, which could mean that the fingerprint has to be scanned again after a while.
+
+\subsubsection{Iris Recognition}
+Iris Recognition is a method of scanning and comparing the iris of two eyes. Although the technology is somewhat new, it is already in use many places. Strengths of iris recognition is that it is fast, with comparisons being in the millions for single-core CPUs. Advantages of iris recognition is speed and accuracy. One disadvantage of iris recognition is that a high quality camera has to be used in order for the camera to pick up on small details. Iris scanners can like fingerprints be fooled using a high quality image printed on paper. Another disadvantage is that it has been shown that surgical procedures can change iris' so that the scanner can not recognize that person.
+
+\subsection{Conclusion}
+In conclusion the platform and identification chosen is Arduino and RFID. Arduino was chosen because the university already has those development boards, which means that no time is wasted getting another platform approved and bought. Arduino was also chosen because of their shield design, which enables the use of a Ethernet shield as well as a RFID shield. Some of the group has also already worked with Arduino, which means a lower learning curve. RFID was originally not chosen, instead NFC was chosen. The reason for choosing RFID was that it was what the university already had, and all of the practices of used with RFID can be translated unto NFC. The reason for choosing NFC over RFID, is that it is a well defined standard, it is compatible with the technology used in smartphones and it is short range so no accidental reads happen. The reason for choosing NFC/RFID over fingerprint is that the security of fingerprints is not that good and the possibility of a child's fingerprint changing too much. The reason for choosing NFC/RFID over iris is primarily cost, as the cost of a high quality camera is too much as multiple cameras would be needed.
