language.tex inserted NEEDS REWIEV

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -35,6 +35,7 @@
 	\input{text/analysis_projectFocus.tex}
 	\input{text/targetgroup.tex}
 	\input{text/problemStatement.tex}
+	\input{text/language.tex}
 	
 	% Part Solution
 	\part{Solution}
