--- a/report/text/language.tex
+++ b/report/text/language.tex
@@ -7,7 +7,7 @@ HTML, CSS and JS will be used to develop the interface both for desktop and mobi
 
 \subsection*{Web-server}
 \label{sec:webserver} % INSERT CORRECT LINKS
-On the web-server there is the option to use a lot of different languages for implementing the back-end. To name a few: Java Servlets, ASP.NET, PHP, Ruby and Python. As the intention is that the software produced in this project is built on Open Source technologies and software. ASP.NET will not be considered any further even though mod_mono and other open source implementations exist simply as these do not offer the complete set of API available. When talking PHP vs Ruby and Python it generally is a tie in . But the ease with which one can set-up a test development on ones localhost is is big plus for PHP. Performance wise it depends heavenly on which type of application is run. Benchmarks shows in different favours. PHP and Java Servlets both have god and bad reputation depending on what area is looked into. The same is true for performance where there are reports showing in the favour of both. Some will argue that general code security is better in Servlets than in PHP while others will argue that it is completely the opposite that is the truth. \\
+On the web-server there is the option to use a lot of different languages for implementing the back-end. To name a few: Java Servlets, ASP.NET, PHP, Ruby and Python. As the intention is that the software produced in this project is built on Open Source technologies and software. ASP.NET will not be considered any further even though mod\_ mono and other open source implementations exist simply as these do not offer the complete set of API available. When talking PHP vs Ruby and Python it generally is a tie in . But the ease with which one can set-up a test development on ones localhost is is big plus for PHP. Performance wise it depends heavenly on which type of application is run. Benchmarks shows in different favours. PHP and Java Servlets both have god and bad reputation depending on what area is looked into. The same is true for performance where there are reports showing in the favour of both. Some will argue that general code security is better in Servlets than in PHP while others will argue that it is completely the opposite that is the truth. \\
 As the field is under constant development. One version of one of the systems might be far better performance wise but it still depends on what it is used for. The selection comes from what the group has of prior knowledge and experience and hence the selection is PHP as this is where the group feels most comfortable.
 
 
