Small Changes before sending report to Counsler

--- a/report/text/targetgroup.tex
+++ b/report/text/targetgroup.tex
@@ -1,5 +1,5 @@
 %	Who is the target group?
-\chapter{new title to come}
+\chapter{The Children are Suffering}
 In this chapter the target group is stated and it is explained why the target group would want to buy such a system.
  
 \section{The Target Group}
