Report: New analysis

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -32,9 +32,10 @@
 	
 	% Part Analysis
 	\part{Analysis}
-	\input{text/analysis_projectFocus.tex}
-	\input{text/targetgroup.tex}
-	\input{text/language.tex}
+	\input{text/newAnalysis.tex}
+	%\input{text/analysis_projectFocus.tex} - old
+	%\input{text/targetgroup.tex} - old
+	%\input{text/language.tex} - old
 	\input{text/problemStatement.tex}
 	
 	
