--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -34,6 +34,23 @@ year = {September 2013},
 note ={\url{http://www.psychologytoday.com/blog/being-green/201204/leave-no-child-inside}}
 }
 
+@MISC{bmcPublicHealth,
+author = {Mads F Hjorth},
+title = {Seasonal variation in objectively measured physical activity, sedentary time, cardio-respiratory fitness and sleep duration among 8–11 year-old Danish children: a repeated-measures study},
+howpublished = {Website},
+year = {January 2013},
+note ={\url{http://www.biomedcentral.com/1471-2458/13/808}}
+}
+
+@MISC{sundhedsstyrelsen,
+author = {Sundhedsstyrelsen},
+title = {FAKTA - BØRN OG BEVÆGELSE},
+howpublished = {Website},
+year = {2005},
+note ={\url{http://sundhedsstyrelsen.dk/~/media/C3428A331C024E508754301DAE7A0399.ashx}}
+}
+
+
 @MISC{micasaverde,
 author = {Mi Casa Verde},
 title = {Mi Casa Verde},
